# mwc-random-accelerate

./: .gitignore  .travis.yml  LICENSE  README.md  accelerate-random.cabal  mwc-random-accelerate.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
.github/workflows/: ci.yml
.travis/: install_dependencies.sh
Data/Array/Accelerate/System/Random/: MWC.hs  SFMT.hs
bench/: Main.hs
benchmarks/: Benchmarks.hs  accelerate-random-benchmarks.cabal
