name:                   mwc-random-accelerate
version:                0.1.0.1
synopsis:               Generate Accelerate arrays filled with high quality pseudorandom numbers
description:
  Generate /Accelerate/ arrays filled with high-quality pseudorandom numbers.
  .
  Refer to the main /Accelerate/ package for more information:
  <http://hackage.haskell.org/package/accelerate>
  .
tested-with:            GHC >= 7.8

license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
-- copyright:
category:               Data
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

library
  default-language:    Haskell2010
  exposed-modules:
    Data.Array.Accelerate.System.Random.MWC

  build-depends:
      base                      >= 4.7 && < 5
    , accelerate                >= 0.15
    , mwc-random                >= 0.8

  ghc-options:
    -O2
    -Wall

benchmark bench-random
  buildable:            False

  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              Main.hs

  build-depends:
        base                    >= 4.7 && < 5
      , accelerate              >= 1.4 && < 1.5
      , criterion
      , mersenne-random
      , mwc-random
      , mwc-random-accelerate
      , vector

  ghc-options:
    -O2
    -rtsopts


source-repository head
  type:                 git
  location:             git://github.com/tmcdonell/mwc-random-accelerate.git

source-repository this
  type:                 git
  tag:                  0.1.0.0
  location:             git://github.com/tmcdonell/mwc-random-accelerate.git

-- vim: nospell
