name:                accelerate-random-benchmarks
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable random-benchmarks
  default-language:    Haskell2010
  main-is:             Benchmarks.hs
  build-depends:
        base                    >= 4.7 && < 4.10
      , accelerate
      , accelerate-random
      , criterion
      , mersenne-random
      , mwc-random
      -- , sfmt
      , vector

  ghc-options:        -O3 -rtsopts

